# csc-opt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cfg.cpp  cfg.h  csc-opt.cpp  pass.cpp  pass.h  tac.cpp  tac.h
src/pass/: CSE.cpp  CSE.h  DSE.cpp  DSE.h  LICM.cpp  LICM.h  RSSA.cpp  RSSA.h  SCP.cpp  SCP.h  SSA.cpp  SSA.h  common_subexpression_elimination.cpp  common_subexpression_elimination.h  convert_ssa.cpp  convert_ssa.h  dead_statement_elimination.cpp  dead_statement_elimination.h  loop_invariant_code_motion.cpp  pass.cpp  pass.h  revert_ssa.cpp  revert_ssa.h  simple_constant_propagation.cpp  simple_constant_propagation.h
test/: gcd.dump  gcd.tac  lab1-check-one.sh  lab1-check.sh  lab2-check-one.sh  lab2-check.sh  loop.dump  loop.tac  simple.tac  sort.tac  test_scp.c  test_scp.tac
test/c/: test_dse.c
test/rssa/: collatz.tac  loop-rssa.tac  mmm-rssa.tac  sort-rssa.tac
test/ssa/: gcd-ssa.tac  gcd.dump  loop-ssa.tac  loop.dump  mmm-ssa.tac  prime-nssa.tac  prime-ssa.tac  regslarge-ssa.tac  sieve-ssa.tac  simple-ssa.dump  simple-ssa.tac  simple.tac  sort-ssa.tac  struct-ssa.tac
test/tac/: hanoifibfac.tac  loop.tac  mmm.tac  prime.tac  regslarge.tac  sieve.tac  struct.tac  test_dse.tac
